--- a/restaurants/menu_palette_du_gout.html
+++ b/restaurants/menu_palette_du_gout.html
@@ -2,25 +2,25 @@
 <html lang="fr">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <title>Ohmyfood - La palette du goût</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,700&family=Shrikhand&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet" href="../sass/index.css" />
+    rel="stylesheet">
+  <link rel="stylesheet" href="../sass/index.css">
   <script src="https://kit.fontawesome.com/3f75339eca.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <header class="header">
     <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-    <img class="header__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood" />
+    <img class="header__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
   </header>
   <main class="restaurant">
     <div class="restaurant__photo">
       <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-        alt="Une assiette à La palette du goût" title="Une assiette à La palette du goût" />
+        alt="Une assiette à La palette du goût" title="Une assiette à La palette du goût">
     </div>
     <div class="restaurant__menu">
       <div class="restaurant__info">
@@ -43,7 +43,7 @@
               </div>
               <div class="recipes__price">25€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -55,7 +55,7 @@
               </div>
               <div class="recipes__price">35€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -67,7 +67,7 @@
               </div>
               <div class="recipes__price">20€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -83,7 +83,7 @@
               </div>
               <div class="recipes__price">40€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -95,7 +95,7 @@
               </div>
               <div class="recipes__price">35€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -107,7 +107,7 @@
               </div>
               <div class="recipes__price">44€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -123,7 +123,7 @@
               </div>
               <div class="recipes__price">18€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -135,7 +135,7 @@
               </div>
               <div class="recipes__price">22€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -147,14 +147,13 @@
               </div>
               <div class="recipes__price">23€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <a href="#"><button class="button__gradient">Commander</button></a>
-    </div>
+      <button class="button__gradient">Commander</button>
     </div>
   </main>
   <footer>
