--- a/index.html
+++ b/index.html
@@ -2,33 +2,33 @@
 <html lang="fr">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <title>Ohmyfood</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,700&family=Shrikhand&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet" href="sass/index.css" />
+    rel="stylesheet">
+  <link rel="stylesheet" href="sass/index.css">
   <script src="https://kit.fontawesome.com/3f75339eca.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div class="loader">
-    <img class="logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood" />
+    <img class="logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
     <div class="table2">
-      <img class="fork" src="assets/images/loader/fork.png" alt="fourchette" />
+      <img class="fork" src="assets/images/loader/fork.png" alt="fourchette">
       <div class="plate">
         <div class="circle"></div>
         <div class="round"></div>
       </div>
-      <img class="knife" src="assets/images/loader/knife.png" alt="couteau" />
+      <img class="knife" src="assets/images/loader/knife.png" alt="couteau">
     </div>
   </div>
   <header>
-    <img class="header__logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood" />
+    <img class="header__logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
     <div class="header__location">
       <i class="fa-solid fa-location-dot"></i>
-      <input type="text" name="location" id="city" placeholder="Paris, Belleville" />
+      <input type="text" name="location" id="city" placeholder="Paris, Belleville">
     </div>
   </header>
   <main class="main__container">
@@ -38,7 +38,7 @@
       <a href="#restaurants" class="button__gradient">Explorer nos restaurants</a>
     </section>
     <section>
-      <h1>Fonctionnement</h1>
+      <h2>Fonctionnement</h2>
       <div class="howto">
         <div class="howto__card">
           <p class="howto__card-number">1</p>
@@ -64,14 +64,14 @@
       </div>
     </section>
     <section id="restaurants" class="section__bgd">
-      <h1>Restaurants</h1>
+      <h2>Restaurants</h2>
       <div class="restaurant__list">
         <div class="card__container">
           <a href="restaurants/menu_palette_du_gout.html">
             <article class="restaurant__card">
               <div class="restaurant__photo">
                 <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                  alt="Une table à La palette du goût" title="Une table à La palette du goût" />
+                  alt="Une table à La palette du goût" title="Une table à La palette du goût">
                 <div class="button__new">Nouveau</div>
               </div>
               <div class="restaurant__card-content">
@@ -89,7 +89,7 @@
             <article class="restaurant__card">
               <div class="restaurant__photo">
                 <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Une table à La note enchantée"
-                  title="Une table à La note enchantée" />
+                  title="Une table à La note enchantée">
                 <div class="button__new">Nouveau</div>
               </div>
               <div class="restaurant__card-content">
@@ -97,6 +97,7 @@
                   <h3>La note enchantée</h3>
                   <p>Charonne</p>
                 </div>
+              </div>
             </article>
           </a>
           <button class="restaurant__rate2"><i class="fa-regular fa-heart"></i>
@@ -108,13 +109,14 @@
             <article class="restaurant__card">
               <div class="restaurant__photo">
                 <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Une table à la Française"
-                  title="Une table à la Française" />
+                  title="Une table à la Française">
               </div>
               <div class="restaurant__card-content">
                 <div>
                   <h3>A la Française</h3>
                   <p>Cité Rouge</p>
                 </div>
+              </div>
             </article>
           </a>
           <button class="restaurant__rate2"><i class="fa-regular fa-heart"></i>
@@ -126,13 +128,14 @@
             <article class="restaurant__card">
               <div class="restaurant__photo">
                 <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                  alt="Une table au délice des sens" title="Une table au délice des sens" />
+                  alt="Une table au délice des sens" title="Une table au délice des sens">
               </div>
               <div class="restaurant__card-content">
                 <div>
                   <h3>Le délice des sens</h3>
                   <p>Folie-Méricourt</p>
                 </div>
+              </div>
             </article>
           </a>
           <button class="restaurant__rate2"><i class="fa-regular fa-heart"></i>
