--- a/restaurants/menu_delice_des_sens.html
+++ b/restaurants/menu_delice_des_sens.html
@@ -2,25 +2,25 @@
 <html lang="fr">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8" >
   <title>Ohmyfood - Le délice des Sens</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,700&family=Shrikhand&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet" href="../sass/index.css" />
+    rel="stylesheet">
+  <link rel="stylesheet" href="../sass/index.css">
   <script src="https://kit.fontawesome.com/3f75339eca.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <header class="header">
     <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-    <img class="header__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood" />
+    <img class="header__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
   </header>
   <main class="restaurant">
     <div class="restaurant__photo">
       <img src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-        alt="Une assiette au Délice des sens" title="Une assiette au Délice des sens" />
+        alt="Une assiette au Délice des sens" title="Une assiette au Délice des sens">
     </div>
     <div class="restaurant__menu">
       <div class="restaurant__info">
@@ -42,7 +42,7 @@
               </div>
               <div class="recipes__price">25€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -54,7 +54,7 @@
               </div>
               <div class="recipes__price">35€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -66,7 +66,7 @@
               </div>
               <div class="recipes__price">20€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -84,7 +84,7 @@
               </div>
               <div class="recipes__price">40€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i> 
               </div>
             </div>
           </div>
@@ -96,7 +96,7 @@
               </div>
               <div class="recipes__price">35€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i> 
               </div>
             </div>
           </div>
@@ -108,7 +108,7 @@
               </div>
               <div class="recipes__price">44€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i> 
               </div>
             </div>
           </div>
@@ -126,7 +126,7 @@
               </div>
               <div class="recipes__price">18€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i> 
               </div>
             </div>
           </div>
@@ -138,7 +138,7 @@
               </div>
               <div class="recipes__price">22€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i> 
               </div>
             </div>
           </div>
@@ -150,14 +150,13 @@
               </div>
               <div class="recipes__price">23€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i> 
               </div>
             </div>
           </div>
         </div>
       </div>
-      <a href="#"><button class="button__gradient">Commander</button></a>
-    </div>
+      <button class="button__gradient">Commander</button>
     </div>
   </main>
   <footer>
