--- a/restaurants/menu_note_enchantee.html
+++ b/restaurants/menu_note_enchantee.html
@@ -2,33 +2,33 @@
 <html lang="fr">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <title>Ohmyfood - La note enchantée</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,700&family=Shrikhand&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet" href="../sass/index.css" />
+    rel="stylesheet">
+  <link rel="stylesheet" href="../sass/index.css">
   <script src="https://kit.fontawesome.com/3f75339eca.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <header class="header">
     <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-    <img class="header__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood" />
+    <img class="header__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
   </header>
   <main class="restaurant">
     <div class="restaurant__photo">
       <img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Une assiette à La note enchantée"
-        title="Une assiette à La note enchantée" />
+        title="Une assiette à La note enchantée">
     </div>
     <div class="restaurant__menu">
       <div class="restaurant__info">
         <h1>La note enchantée</h1>
         <button class="restaurant__rate2">
           <i class="fa-regular fa-heart"></i>
-          <i class="fa-solid fa-heart">
-        </i></button>
+          <i class="fa-solid fa-heart"></i>
+        </button>
       </div>
       <div class="menu__container">
         <div class="recipes">
@@ -42,7 +42,7 @@
               </div>
               <div class="recipes__price">25€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -54,7 +54,7 @@
               </div>
               <div class="recipes__price">35€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -66,7 +66,7 @@
               </div>
               <div class="recipes__price">20€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -78,7 +78,7 @@
               </div>
               <div class="recipes__price">35€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -94,7 +94,7 @@
               </div>
               <div class="recipes__price">40€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -106,7 +106,7 @@
               </div>
               <div class="recipes__price">35€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -118,7 +118,7 @@
               </div>
               <div class="recipes__price">44€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -134,7 +134,7 @@
               </div>
               <div class="recipes__price">18€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -146,7 +146,7 @@
               </div>
               <div class="recipes__price">22€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
@@ -158,14 +158,13 @@
               </div>
               <div class="recipes__price">23€</div>
               <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <a href="#"><button class="button__gradient">Commander</button></a>
-    </div>
+      <button class="button__gradient">Commander</button>
     </div>
   </main>
   <footer>
